<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hEAR v0.88</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Activity Title -->
    <string name="title_activity_admin">Administrator Setup</string>
    <string name="title_activity_screener_login">Administrator Login</string>
    <string name="title_activity_subj_first">Subject Main</string>
    <string name="title_activity_brief_inst">Brief Instruction</string>
    <string name="title_activity_trial_run">Trial Running</string>
    <string name="title_activity_screening">Screening</string>
    <string name="title_activity_screener">Screener</string>
    <string name="title_activity_subj_list">Subject List</string>
    <string name="title_activity_subj_graph">Graph</string>
    <string name="title_activity_new_screener">Add New Screener</string>
    <string name="title_activity_new_screener2">Edit Screener</string>
    
    <!-- Form TextView -->
    <string name="txt_organization">Organization</string>
    <string name="txt_firstName">First Name</string>
    <string name="txt_lastName">Last Name</string>
    <string name="txt_name">Name</string>
    <string name="txt_emailAdr">e-Mail Address</string>
    <string name="txt_userId">User ID</string>
    <string name="txt_userPw">Password</string>
    <string name="txt_noresult">No Result</string>

    <!-- Instruction Text -->
    <string name="txt_instruction1">* Please note that the volume will be adjusted to max automatically.</string>
    <string name="txt_instrSub1">* Press and hold screen to begin test.</string>
	<string name="txt_instrSub2">* Playing tone will start, keep pressing screen until you cannot hearing tone.</string>
	<string name="txt_instrSub3">* Repeat until test is completed</string>
	<string name="txt_instruction2">You will have a brief trial to get you used to the procedure.</string>
    <string name="txt_scrningStart">Now you can hear several tone sounds with pressing the screen. Please follow the instructions below.</string>

    <!-- Dialog Text -->
    <string name="txt_delete_confirm">All data will be deleted. It cannot be covered. Would you continue?</string>
    <string name="txt_unplug_confirm">You are not plugging an earphone or headphone. Please use your earphone for an accurate test.</string>
    <string name="txt_warning_unplug">We strongly recommend to use a headphone or earphone for an accurate test.</string>
    
	<!-- Button Text -->
    <string name="btn_subject">Subject</string>
    <string name="btn_screener">Screener</string>
    <string name="btn_Next">Next</string>
    <string name="btn_Back">Back</string>
    <string name="btn_Edit">Edit</string>
    <string name="btn_Delete">Delete</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_Submit">Submit</string>
    <string name="btn_ProceedAnyway">Proceed Anyway</string>
    <string name="btn_beginTrial">Touch to begin Trial</string>
    <string name="btn_beginScrning">Touch to begin Screening</string>
    <string name="btn_skiptoScrning">I do not need trial. Let me go to screening.</string>
    <string name="btn_trialStart">Touch and keep touching the screen anywhere to hear the tone sounds. You can go back with press back button on your phone.</string>
    <string name="btn_trialTesting">The tone changes with clicking background</string>
    <string name="btn_trialComplete">Trial Complete</string>
    <string name="btn_scrningTesting">Please release your finger if you cannot hear the tone sound.</string>
    <string name="btn_scrningComplete">Screening Complete</string>
    <string name="btn_exitToMain">Exit to Main Menu</string>
    <string name="btn_login">Log In</string>
    <string name="btn_subjList">Subject List</string>
    <string name="btn_manageScreener">Manage Screeners</string>
    <string name="btn_newScreener">Add New Screener</string>
    <string name="btn_register">Register</string>
    <string name="btn_export_csv">Export to file</string>
    <string name="btn_import_csv">Import User</string>
    <string name="btn_send_to_admin">e-Mail to Admin</string>
    <string name="list_noresult">No Result</string>
    <string name="title_activity_screener_mgt">Screener Management</string>
    <string name="action_settings">Settings</string>

</resources>
