<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_trial_run"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TrialRunActivity" >

    <TextView
        android:id="@+id/textViewTrialComplete"
        style="@style/TrialTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonBeginTrial"
        android:layout_alignParentTop="true"
        android:text="@string/txt_instruction1" />

    <Button
        android:id="@+id/buttonBeginScrning"
        style="@style/TrialButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonBeginTrial"
        android:text="@string/btn_beginScrning" />

    <TextView
        android:id="@+id/textInstrSub1"
        style="@style/TrialTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewTrialComplete"
        android:text="@string/txt_instrSub1" />

    <TextView
        android:id="@+id/textInstrSub2"
        style="@style/TrialTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textInstrSub1"
        android:text="@string/txt_instrSub2" />

    <TextView
        android:id="@+id/textInstrSub3"
        style="@style/TrialTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textInstrSub1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textInstrSub2"
        android:text="@string/txt_instrSub3" />

    <Button
        android:id="@+id/buttonBeginTrial"
        style="@style/TrialButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textInstrSub3"
        android:text="@string/btn_beginTrial" />

</RelativeLayout>