<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BriefInstActivity" >

    <TextView
        style="@style/BriefInstructionTextStyle"
        android:id="@+id/textViewTrialComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txt_instruction1" />

	<TextView
	    android:id="@+id/textView2"
	    style="@style/BriefInstructionTextStyle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textViewTrialComplete"
	    android:layout_below="@+id/textViewTrialComplete"
	    android:text="@string/txt_instruction2" />

	<Button
	    android:id="@+id/buttonSkipTrial"
	    style="@style/BriefInstructionButtonStyle_LongTxt"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/buttonBeginTrial"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/buttonBeginTrial"
	    android:text="@string/btn_skiptoScrning" />

	<Button
	    android:id="@+id/buttonBeginTrial"
	    style="@style/BriefInstructionButtonStyle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textView2"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/textView2"
	    android:text="@string/btn_beginTrial" />

</RelativeLayout>
