<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_screening"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScreeningActivity" >

    <Button
        android:id="@+id/buttonBeginScrng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewScrngComplete"
        android:text="@string/btn_beginScrning" />

    <Button
        android:id="@+id/buttonExitToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonBeginScrng"
        android:text="@string/btn_exitToMain" />

    <TextView
        android:id="@+id/textViewScrngComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonBeginScrng"
        android:layout_alignParentTop="true"
        android:text="@string/txt_scrningStart"
        android:textSize="0.15in" />

</RelativeLayout>