<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SubjFirstActivity" >

    <Button
        style="@style/SubjectFirstButtonStyle"
        android:id="@+id/buttonSubjNext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonSubjBack"
        android:layout_alignBottom="@+id/buttonSubjBack"
        android:layout_alignParentRight="true"
        android:text="@string/btn_Next" />

    <Button
        android:id="@+id/buttonSubjBack"
        style="@style/SubjectFirstButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_Back" />

    <ListView
        android:id="@+id/listViewUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSubjBack"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

    </ListView>

    <TextView
        android:id="@+id/textEmptyView"
        style="@style/SubjectListTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/list_noresult" />

</RelativeLayout>